--- a/part1/index.html
+++ b/part1/index.html
@@ -1,15 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/index.css">
-  <title>Fin Kit</title>
-</head>
-<body>
-  <header class="header">
-    <h1>Hello</h1>
-  </header>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.cdnfonts.com/css/euclid-circular-a"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles/index.css" />
+    <title>Fin Kit</title>
+  </head>
+  <body>
+    <header class="header">
+      <div class="header__wprapper">
+        <div class="switch_lang__container">
+          <a class="switch_lang__link" href="#">RU</a>
+          <a class="switch_lang__link" href="#">EN</a>
+        </div>
+
+        <div class="app__container">
+          <div class="app_info__container">
+            <h1 class="app_info__title">
+              Fin<mark class="mark_title">Kit</mark>
+            </h1>
+            <p class="app_info__description">
+              Гибкая мобильная платформа для быстрой реализации инвестиционных
+              сервисов.
+            </p>
+            <button class="app_info__btn">Заказать демо</button>
+          </div>
+
+          <div class="app_image__container">
+            <img class="app_image__item" src="./assets/main.svg" alt="" />
+          </div>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
