--- a/part1/index.html
+++ b/part1/index.html
@@ -8,6 +8,7 @@
       href="https://fonts.cdnfonts.com/css/euclid-circular-a"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./styles/fontello.css">
     <link rel="stylesheet" href="./styles/index.css" />
     <title>Fin Kit</title>
   </head>
@@ -37,5 +38,16 @@
         </div>
       </div>
     </header>
+
+    <main class="main">
+      <div class="benefits">
+        <div class="benefits_instruments__container">
+          <li><i class="graphicon-"></i></li>
+        </div>
+        <div class="benefits__wrapper">
+          <h2 class="benefits__title">Наши <mark class="benefits__title_color">ключевые продукты</mark> для инвестиций</h2>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
