refactor[part1]: add styling benefits, add pruducts block

--- a/part1/index.html
+++ b/part1/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.cdnfonts.com/css/euclid-circular-a"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./styles/fontello.css">
+    <link rel="stylesheet" href="./styles/fontello.css" />
     <link rel="stylesheet" href="./styles/index.css" />
     <title>Fin Kit</title>
   </head>
@@ -41,11 +41,38 @@
 
     <main class="main">
       <div class="benefits">
-        <div class="benefits_instruments__container">
-          <li><i class="graphicon-"></i></li>
-        </div>
         <div class="benefits__wrapper">
-          <h2 class="benefits__title">Наши <mark class="benefits__title_color">ключевые продукты</mark> для инвестиций</h2>
+          <div class="benefits_instruments__container">
+            <div class="benefits_instruments__item">
+              <h3 class="item__title">Удобный пользовательский интерфейс</h3>
+              <i class="item__icon graphicon-"></i>
+            </div>
+  
+            <div class="benefits_instruments__item">
+              <h3 class="item__title">Панель администратора для ведения учета</h3>
+              <i class="item__icon activityicon-"></i>
+            </div>
+  
+            <div class="benefits_instruments__item">
+              <h3 class="item__title">Простая и быстрая интеграция</h3>
+              <i class="item__icon filtericon-"></i>
+            </div>
+  
+            <div class="benefits_instruments__item">
+              <h3 class="item__title">Гибкая масштабируемая система</h3>
+              <i class="item__icon settingicon-"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="products">
+        <div class="products__wrapper">
+          <h2 class="products__title">
+            Наши
+            <mark class="products__title_color">ключевые продукты</mark> для
+            инвестиций
+          </h2>
         </div>
       </div>
     </main>
