refactor[part1]: styling products block

--- a/part1/index.html
+++ b/part1/index.html
@@ -73,6 +73,24 @@
             <mark class="products__title_color">ключевые продукты</mark> для
             инвестиций
           </h2>
+
+          <div class="products__container">
+            <div class="products_item">
+              <div class="products_item__wrapper">
+                <h3 class="products_item__title">Платформа для автоследования</h3>
+                <p class="products_item__description">Копирование стратегий в автономном режиме</p>
+              </div>
+              <img class="products_image" src="./assets/products_1.svg" alt="products_1">
+            </div>
+
+            <div class="products_item">
+              <div class="products_item__wrapper">
+                <h3 class="products_item__title">Платформа для робо-эдвайзинга</h3>
+                <p class="products_item__description _widely">Персонализированный подбор стратегий исходя из заданных параметров</p>
+              </div>
+              <img class="products_image" src="./assets/products_2.svg" alt="products_2">
+            </div>
+          </div>
         </div>
       </div>
     </main>
