feat[part1]: add values block, add styles, finish base desktop

--- a/part1/index.html
+++ b/part1/index.html
@@ -47,17 +47,19 @@
               <h3 class="item__title">Удобный пользовательский интерфейс</h3>
               <i class="item__icon graphicon-"></i>
             </div>
-  
+
             <div class="benefits_instruments__item">
-              <h3 class="item__title">Панель администратора для ведения учета</h3>
+              <h3 class="item__title">
+                Панель администратора для ведения учета
+              </h3>
               <i class="item__icon activityicon-"></i>
             </div>
-  
+
             <div class="benefits_instruments__item">
               <h3 class="item__title">Простая и быстрая интеграция</h3>
               <i class="item__icon filtericon-"></i>
             </div>
-  
+
             <div class="benefits_instruments__item">
               <h3 class="item__title">Гибкая масштабируемая система</h3>
               <i class="item__icon settingicon-"></i>
@@ -77,18 +79,83 @@
           <div class="products__container">
             <div class="products_item">
               <div class="products_item__wrapper">
-                <h3 class="products_item__title">Платформа для автоследования</h3>
-                <p class="products_item__description">Копирование стратегий в автономном режиме</p>
+                <h3 class="products_item__title">
+                  Платформа для автоследования
+                </h3>
+                <p class="products_item__description">
+                  Копирование стратегий в автономном режиме
+                </p>
               </div>
-              <img class="products_image" src="./assets/products_1.svg" alt="products_1">
+              <img
+                class="products_image"
+                src="./assets/products_1.svg"
+                alt="products_1"
+              />
             </div>
 
             <div class="products_item">
               <div class="products_item__wrapper">
-                <h3 class="products_item__title">Платформа для робо-эдвайзинга</h3>
-                <p class="products_item__description _widely">Персонализированный подбор стратегий исходя из заданных параметров</p>
+                <h3 class="products_item__title">
+                  Платформа для робо-эдвайзинга
+                </h3>
+                <p class="products_item__description _widely">
+                  Персонализированный подбор стратегий исходя из заданных
+                  параметров
+                </p>
               </div>
-              <img class="products_image" src="./assets/products_2.svg" alt="products_2">
+              <img
+                class="products_image"
+                src="./assets/products_2.svg"
+                alt="products_2"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="values">
+        <div class="values__wrapper">
+          <div class="values_content__container">
+            <h2 class="values_content__title">
+              <mark class="values_content__title _colored"
+                >Представляем ценность</mark
+              >
+              для броĸера и банĸа
+            </h2>
+            <p class="values_content__description">
+              Мы помогаем броĸерам и банĸам запустить собственное мобильное
+              приложение для инвестиций в ĸоротĸие сроĸи и с эĸономией бюджета
+            </p>
+            <button class="values_content__btn">Заказать демо</button>
+          </div>
+
+          <div class="values_icon__container">
+            <div class="icon__item">
+              <i class="group-2206icon-"></i>
+              <p class="icon__description">
+                Эĸономим время и деньги на запусĸ digital сервисов
+              </p>
+            </div>
+
+            <div class="icon__item">
+              <i class="group-2207icon-"></i>
+              <p class="icon__description">
+                Создаем канал привлечения новых клиентов
+              </p>
+            </div>
+
+            <div class="icon__item">
+              <i class="group-2190icon-"></i>
+              <p class="icon__description">
+                Помогаем увеличить<br>выручку путем запуска нового продукта
+              </p>
+            </div>
+
+            <div class="icon__item">
+              <i class="__4icon-"></i>
+              <p class="icon__description">
+                Повышаем лояльность действующих клиентов
+              </p>
             </div>
           </div>
         </div>
