feat[part1]: add adaptive styles

--- a/part1/index.html
+++ b/part1/index.html
@@ -147,7 +147,7 @@
             <div class="icon__item">
               <i class="group-2190icon-"></i>
               <p class="icon__description">
-                Помогаем увеличить<br>выручку путем запуска нового продукта
+                Помогаем увеличить выручку путем запуска нового продукта
               </p>
             </div>
 
